# mealprepdb

./: .env-example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  setversion.py  test-runner.sh
.github/: version_tag.py
.github/workflows/: unittest.yaml
mealprepdb/: _version.py  config.py
mealprepdb/api/: auth.py  base.py  deps.py  main.py  paginator.py
mealprepdb/api/dish/: dish.py  dish_ingredient.py  route.py
mealprepdb/api/ingredient/: ingredient.py  ingredient_in_inventory.py  route.py
mealprepdb/api/meal/: meal.py  meal_dish.py  meal_ingredient.py  route.py
mealprepdb/frontend/: app.py
mealprepdb/frontend/assets/: style.css
mealprepdb/frontend/callbacks/: __init__.py  common.py  dish.py  ingredient.py
mealprepdb/frontend/components/: __init__.py  dish.py  ingredient.py  meal.py
migrations/: env.py
migrations/versions/: 15df77bde24b_init_schema.py
tests/: conftest.py  test_dish_route.py  test_ingredient_route.py  test_meal_route.py  test_smoke.py
tests/seeds/: __init__.py  dish.py  dish_ingredient.py  ingredient.py  ingredient_in_inventory.py  meal.py  meal_dish.py  meal_ingredient.py
