[tool.poetry]
name = "mealprepdb"
version = "0.1.0"
description = "db to track meal prepping"
authors = ["tinnaing347 <tinnaing347@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
aiodal = {git = "https://github.com/cunybpl/aiodal.git", tag = "0.5.1"}
alembic = "^1.11.2"
asyncpg = "^0.27.0"
click = "^8.1.3"
fastapi = "^0.103"
fastapi_auth0 = {git = "https://github.com/cunybpl/fastapi_auth0.git", tag = "0.2.1"}
orjson = "^3.9.5"
pydantic = "^2.3"
python = ">=3.11,<3.12"
uvicorn = "^0.23.2"

[tool.poetry.dev-dependencies]
anyio = "^3.6.2"
black = "^23.1.0"
httpx = "0.23.0" # https://github.com/encode/httpx/issues/2462
mypy = "^1.0.1"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
respx = "^0.19.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.pytest.ini_options]
log_cli = true
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_level = "INFO"
markers = ["live: mark a live test"]
testpaths = ["tests"]